Make sure 'Mark as Complete' button is not covered
The "Notes" paragraph in the `text-box` wrapper was overlapping the button,
preventing clicks landing on the button. This makes sure the notes clear the
button.

--- a/app/assets/stylesheets/_text-box.scss
+++ b/app/assets/stylesheets/_text-box.scss
@@ -1,6 +1,7 @@
 .text-box {
   margin-bottom: 1em;
   position: relative;
+  clear: both;
 
   h1, h2, h3, h4, h5, h6 {
     margin: 2rem 0 1rem;
